--- a/test/perf/CMakeLists.txt
+++ b/test/perf/CMakeLists.txt
@@ -4,6 +4,8 @@ include_directories(${PROJECT_SOURCE_DIR}/include googlebenchmark/include)
 
 add_executable(looping looping.cpp ${PROJECT_SOURCE_DIR}/include/AVArray/AVArray.hpp googlebenchmark/include/benchmark/benchmark.h)
 
+target_compile_options(looping PRIVATE -fopt-info-vec -fno-omit-frame-pointer)
+
 link_directories(googlebenchmark)
 target_link_libraries(looping benchmark)
 
