Reports for multiple compilers.

--- a/test/perf/CMakeLists.txt
+++ b/test/perf/CMakeLists.txt
@@ -5,8 +5,16 @@ include_directories(${PROJECT_SOURCE_DIR}/include googlebenchmark/include)
 add_executable(looping looping.cpp ${PROJECT_SOURCE_DIR}/include/AVArray/AVArray.hpp googlebenchmark/include/benchmark/benchmark.h)
 add_executable(matmult matmult.cpp ${PROJECT_SOURCE_DIR}/include/AVArray/AVArray.hpp googlebenchmark/include/benchmark/benchmark.h)
 
-target_compile_options(looping PRIVATE -fopt-info-loop -fno-omit-frame-pointer)
-target_compile_options(matmult PRIVATE -fopt-info-loop -fno-omit-frame-pointer)
+if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
+	target_compile_options(looping PRIVATE -fopt-info-loop -fno-omit-frame-pointer)
+	target_compile_options(matmult PRIVATE -fopt-info-loop -fno-omit-frame-pointer)
+elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Cray")
+	target_compile_options(looping PRIVATE -h report=v)
+	target_compile_options(matmult PRIVATE -h report=v)
+elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
+	target_compile_options(looping PRIVATE -vec-report=7)
+	target_compile_options(matmult PRIVATE -vec-report=7)
+endif()
 
 link_directories(googlebenchmark)
 target_link_libraries(looping benchmark)
