Compiles with clang.

--- a/test/perf/CMakeLists.txt
+++ b/test/perf/CMakeLists.txt
@@ -6,14 +6,17 @@ add_executable(looping looping.cpp ${PROJECT_SOURCE_DIR}/include/AVArray/AVArray
 add_executable(matmult matmult.cpp ${PROJECT_SOURCE_DIR}/include/AVArray/AVArray.hpp googlebenchmark/include/benchmark/benchmark.h)
 
 if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
-	target_compile_options(looping PRIVATE -fopt-info-loop -fno-omit-frame-pointer)
-	target_compile_options(matmult PRIVATE -fopt-info-loop -fno-omit-frame-pointer)
+	target_compile_options(looping PRIVATE -fopt-info-vec -fno-omit-frame-pointer -march=native)
+	target_compile_options(matmult PRIVATE -fopt-info-vec -fno-omit-frame-pointer -march=native)
 elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Cray")
 	target_compile_options(looping PRIVATE -h report=v)
 	target_compile_options(matmult PRIVATE -h report=v)
 elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
 	target_compile_options(looping PRIVATE -vec-report=7)
 	target_compile_options(matmult PRIVATE -vec-report=7)
+elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+	target_compile_options(looping PRIVATE -Rpass=loop-vectorize -fno-omit-frame-pointer -march=native)
+	target_compile_options(matmult PRIVATE -Rpass=loop-vectorize -fno-omit-frame-pointer -march=native)
 endif()
 
 link_directories(googlebenchmark)
