--- a/test/perf/CMakeLists.txt
+++ b/test/perf/CMakeLists.txt
@@ -12,8 +12,8 @@ elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Cray")
 	target_compile_options(looping PRIVATE -h report=v)
 	target_compile_options(matmult PRIVATE -h report=v)
 elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
-	target_compile_options(looping PRIVATE -vec-report=7)
-	target_compile_options(matmult PRIVATE -vec-report=7)
+	target_compile_options(looping PRIVATE -qopt-report=1 -qopt-report-file=stderr -qopt-report-phase=loop)
+	target_compile_options(matmult PRIVATE -qopt-report=1 -qopt-report-file=stderr -qopt-report-phase=loop)
 endif()
 
 link_directories(googlebenchmark)
