Trying to develop nice tensor class.

--- a/test/perf/CMakeLists.txt
+++ b/test/perf/CMakeLists.txt
@@ -9,11 +9,11 @@ if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
 	target_compile_options(looping PRIVATE -fopt-info-vec -fno-omit-frame-pointer -march=native)
 	target_compile_options(matmult PRIVATE -fopt-info-vec -fno-omit-frame-pointer -march=native)
 elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Cray")
-	target_compile_options(looping PRIVATE -h report=v)
-	target_compile_options(matmult PRIVATE -h report=v)
+	target_compile_options(looping PRIVATE -h report=v -fno-omit-frame-pointer -march=native)
+	target_compile_options(matmult PRIVATE -h report=v -fno-omit-frame-pointer -march=native)
 elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
-	target_compile_options(looping PRIVATE -qopt-report=1 -qopt-report-file=stderr -qopt-report-phase=vec -march=native)
-	target_compile_options(matmult PRIVATE -qopt-report=1 -qopt-report-file=stderr -qopt-report-phase=vec -march=native)
+	target_compile_options(looping PRIVATE -qopt-report=1 -qopt-report-file=stdout -qopt-report-phase=vec -fno-omit-frame-pointer -march=native)
+	target_compile_options(matmult PRIVATE -qopt-report=1 -qopt-report-file=stdout -qopt-report-phase=vec -fno-omit-frame-pointer -march=native)
 elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
 	target_compile_options(looping PRIVATE -Rpass=loop-vectorize -fno-omit-frame-pointer -march=native)
 	target_compile_options(matmult PRIVATE -Rpass=loop-vectorize -fno-omit-frame-pointer -march=native)
