Using signed ints give better chances for vectorization.

--- a/test/perf/CMakeLists.txt
+++ b/test/perf/CMakeLists.txt
@@ -5,19 +5,17 @@ include_directories(${PROJECT_SOURCE_DIR}/include googlebenchmark/include)
 add_executable(looping looping.cpp ${PROJECT_SOURCE_DIR}/include/AVArray/AVArray.hpp googlebenchmark/include/benchmark/benchmark.h)
 add_executable(matmult matmult.cpp ${PROJECT_SOURCE_DIR}/include/AVArray/AVArray.hpp googlebenchmark/include/benchmark/benchmark.h)
 
-if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
-	target_compile_options(looping PRIVATE -fopt-info-vec -fno-omit-frame-pointer -march=native)
-	target_compile_options(matmult PRIVATE -fopt-info-vec -fno-omit-frame-pointer -march=native)
-elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Cray")
-	target_compile_options(looping PRIVATE -h report=v)
-	target_compile_options(matmult PRIVATE -h report=v)
-elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
-	target_compile_options(looping PRIVATE -qopt-report=1 -qopt-report-file=stderr -qopt-report-phase=vec -march=native)
-	target_compile_options(matmult PRIVATE -qopt-report=1 -qopt-report-file=stderr -qopt-report-phase=vec -march=native)
-elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
-	target_compile_options(looping PRIVATE -Rpass=loop-vectorize -fno-omit-frame-pointer -march=native)
-	target_compile_options(matmult PRIVATE -Rpass=loop-vectorize -fno-omit-frame-pointer -march=native)
-endif()
+foreach(target looping matmult)
+	if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
+		target_compile_options(${target} PRIVATE -fopt-info-vec -fno-omit-frame-pointer -march=native)
+	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Cray")
+		target_compile_options(${target} PRIVATE -h report=v -march=native)
+	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Intel")
+		target_compile_options(${target} PRIVATE -qopt-report=5 -qopt-report-file=stderr -qopt-report-phase=vec -march=native)
+	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+		target_compile_options(${target} PRIVATE -Rpass=loop-vectorize -fno-omit-frame-pointer -march=native)
+	endif()
+endforeach(target)
 
 link_directories(googlebenchmark)
 target_link_libraries(looping benchmark)
